tests/invalid/bind_in_negated.err_exp
bind_in_negated.m:014: In clause for `p((bound(f(free, ground)) >> ground),
bind_in_negated.m:014:   (bound(f(ground, free)) >> ground), out)':
bind_in_negated.m:014:   scope error: attempt to bind a non-local variable
bind_in_negated.m:014:   inside the condition of an if-then-else.
bind_in_negated.m:014:   Variable `A' has instantiatedness
bind_in_negated.m:014:   `bound(bind_in_negated.f(free, ground))',
bind_in_negated.m:014:   expected instantiatedness was
bind_in_negated.m:014:   `bound(bind_in_negated.f(ground, ground))'.
bind_in_negated.m:014:   The condition of an if-then-else is only allowed to
bind_in_negated.m:014:   bind variables which are local to the condition or
bind_in_negated.m:014:   which occur only in the condition and the `then' part.
